kubernetes/apps/blog-notion/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-web
  namespace: blog
spec:
  selector:
    app: blog-web
  ports:
    - name: http
      port: 80
      targetPort: 8000
